etc/kubernetes/ci-cd/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  namespace: quality-{BUILD_ENV}
  name: quality-{BUILD_ENV}
